# sh_krypt

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python.yml
app/: api.py  config.py  logging.py  models.py  schemas.py  shbkp.py  utils.py
app/auth/: auth_bearer.py  auth_handler.py
app/routes/: auth.py  company.py  filemeta.py
